[project]
name = "mcp-chat"
version = "0.3.0"
description = "Simple MCP Client to quickly test and explore MCP servers from the command line"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "client",
    "cli",
    "langchain",
    "tools",
    "python",
    "simple",
    "quick",
    "explore",
    "try",
    "test"
]
dependencies = [
    "langchain-mcp-tools>=0.3.0",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-anthropic>=1.3.2",
    "langchain-openai>=1.1.8",
    "langchain-xai>=1.2.2",
    "pyjson5>=1.6.8",
    "python-dotenv>=1.0.1",
    "websockets>=15.0.1",
    "langchain-cerebras>=0.8.2",
    "langchain-groq>=1.1.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/hideya/mcp-client-langchain-py/issues"
"Source Code" = "https://github.com/hideya/mcp-client-langchain-py"

[project.scripts]
mcp-chat = "mcp_chat.cli_chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
